--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
     <link rel="stylesheet" href="./resources/style.css">
   </head>
   <body>
-  
+    <!-- Header -->
+    <header>
+      <div class="logo">
+        <img src="./resources/images/ic-logo.svg" alt="CA Logo">
+        <p><b>Colmar</b>Academy</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">On Campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">For Companies</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Banner -->
+
+    <!-- Section 1 - General -->
+
+    <!-- Section 2 - Classes -->
+
+    <!-- Section 3 - Thesis -->
+
+    <!-- Footer -->
 
   </body>
 </html>
