--- a/index.html
+++ b/index.html
@@ -23,14 +23,36 @@
     </header>
 
     <!-- Banner -->
+    <div class="banner">
+
+    </div>
 
     <!-- Section 1 - General -->
+    <section id="general">
+
+    </section>
 
     <!-- Section 2 - Classes -->
+    <section id="classes">
+
+    </section>
 
     <!-- Section 3 - Thesis -->
+    <section id="thesis">
+
+    </section>
 
     <!-- Footer -->
+    <footer>
+      <p>© 2016 Colmar Academy | All rights reserved</p>
+      <nav>
+        <ul>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+      </nav>
+
+    </footer>
 
   </body>
 </html>
