--- a/index.html
+++ b/index.html
@@ -9,23 +9,32 @@
   <body>
     <!-- Header -->
     <header>
-      <div class="logo">
-        <img src="./resources/images/ic-logo.svg" alt="CA Logo">
-        <p><b>Colmar</b>Academy</p>
-      </div>
       <nav>
-        <ul>
-          <li><a href="#">On Campus</a></li>
-          <li><a href="#">Online</a></li>
-          <li><a href="#">For Companies</a></li>
-          <li><a href="#">Sign In</a></li>
-        </ul>
+        <div class="logo">
+          <img src="./resources/images/ic-logo.svg" alt="CA Logo">
+          <span><b>Colmar</b>Academy</span>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href="#">On Campus</a></li>
+            <li><a href="#">Online</a></li>
+            <li><a href="#">For Companies</a></li>
+            <li><a href="#">Sign In</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
 
     <!-- Banner -->
     <div class="banner">
-
+      <div class="banner-image">
+        <img src="" alt="">
+      </div>
+      <div class="banner-text">
+        <h1></h1>
+        <p></p>
+        <button type="button" name="button"></button>
+      </div>
     </div>
 
     <!-- Section 1 - General -->
