--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
     <!-- Banner -->
     <div class="banner">
       <div class="banner-image">
-        <img src="" alt="">
+        <img src="./resources/images/banner.jpg" alt="Students Homework">
       </div>
       <div class="banner-text">
-        <h1></h1>
-        <p></p>
-        <button type="button" name="button"></button>
+        <h1>Learn something new everyday</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button type="button" name="button">Start here</button>
       </div>
     </div>
 
     <!-- Section 1 - General -->
     <section id="general">
+
 
     </section>
 
