Added strucutral html for general section.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Banner -->
     <div class="banner">
-      <div class="banner-image">
+      <div class="large-media">
         <img src="./resources/images/banner.jpg" alt="Students Homework">
       </div>
       <div class="banner-text">
@@ -39,6 +39,37 @@
 
     <!-- Section 1 - General -->
     <section id="general">
+      <div class="general-left">
+        <div class="large-media">
+          <img src="" alt="">
+        </div>
+        <h1></h1>
+        <blockquote cite="">
+
+        </blockquote>
+        <cite></cite>
+      </div>
+      
+      <div class="content-right">
+        <div class="panel-right">
+          <img src="" alt="">
+          <h2></h2>
+          <p></p>
+          <a href="#"></a>
+        </div>
+        <div class="panel-right">
+          <img src="" alt="">
+          <h2></h2>
+          <p></p>
+          <a href="#"></a>
+        </div>
+        <div class="panel-right">
+          <img src="" alt="">
+          <h2></h2>
+          <p></p>
+          <a href="#"></a>
+        </div>
+      </div>
 
 
     </section>
