Populated content of general section html.

--- a/index.html
+++ b/index.html
@@ -41,37 +41,35 @@
     <section id="general">
       <div class="general-left">
         <div class="large-media">
-          <img src="" alt="">
+          <img src="./resources/images/information-main.jpg" alt="Reading Book">
         </div>
-        <h1></h1>
+        <h1>It doesn't hurt to keep practicing</h1>
         <blockquote cite="">
-
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </blockquote>
-        <cite></cite>
+        <cite>Emanuel, Sr Strategist at Hiring.com</cite>
       </div>
-      
+
       <div class="content-right">
         <div class="panel-right">
-          <img src="" alt="">
-          <h2></h2>
+          <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
+          <h2>Orientation date</h2>
           <p></p>
-          <a href="#"></a>
+          <a href="#">Read more</a>
         </div>
         <div class="panel-right">
-          <img src="" alt="">
-          <h2></h2>
+          <img src="./resources/images/information-campus.jpg" alt="Classroom">
+          <h2>Our campus</h2>
           <p></p>
-          <a href="#"></a>
+          <a href="#">Read more</a>
         </div>
         <div class="panel-right">
-          <img src="" alt="">
-          <h2></h2>
+          <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+          <h2>Our guest lecture</h2>
           <p></p>
-          <a href="#"></a>
+          <a href="#">Read more</a>
         </div>
       </div>
-
-
     </section>
 
     <!-- Section 2 - Classes -->
