Added structural html for courses section.

--- a/index.html
+++ b/index.html
@@ -72,9 +72,45 @@
       </div>
     </section>
 
-    <!-- Section 2 - Classes -->
-    <section id="classes">
-
+    <!-- Section 2 - Courses -->
+    <section id="courses">
+      <h1></h1>
+      <div class="panel-courses">
+        <img src="" alt="">
+        <h2></h2>
+        <p></p>
+        <p></p>
+      </div>
+      <div class="panel-courses">
+        <img src="" alt="">
+        <h2></h2>
+        <p></p>
+        <p></p>
+      </div>
+      <div class="panel-courses">
+        <img src="" alt="">
+        <h2></h2>
+        <p></p>
+        <p></p>
+      </div>
+      <div class="panel-courses">
+        <img src="" alt="">
+        <h2></h2>
+        <p></p>
+        <p></p>
+      </div>
+      <div class="panel-courses">
+        <img src="" alt="">
+        <h2></h2>
+        <p></p>
+        <p></p>
+      </div>
+      <div class="panel-courses">
+        <img src="" alt="">
+        <h2></h2>
+        <p></p>
+        <p></p>
+      </div>
     </section>
 
     <!-- Section 3 - Thesis -->
