--- a/index.html
+++ b/index.html
@@ -74,42 +74,42 @@
 
     <!-- Section 2 - Courses -->
     <section id="courses">
-      <h1></h1>
+      <h1>Start learning</h1>
       <div class="panel-courses">
-        <img src="" alt="">
-        <h2></h2>
-        <p></p>
-        <p></p>
+        <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
+        <h2>Software Engineering</h2>
+        <p>COURSES</p>
+        <p>Web Development, Mobile Development, iOT, APIs</p>
       </div>
       <div class="panel-courses">
-        <img src="" alt="">
-        <h2></h2>
-        <p></p>
-        <p></p>
+        <img src="./resources/images/course-computer-art.jpg" alt="Handheld Cellphone">
+        <h2>Comuter Art</h2>
+        <p>COURSES</p>
+        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
       </div>
       <div class="panel-courses">
-        <img src="" alt="">
-        <h2></h2>
-        <p></p>
-        <p></p>
+        <img src="./resources/images/course-design.jpg" alt="Vintage Camera">
+        <h2>Design</h2>
+        <p>COURSES</p>
+        <p>User Experience Design, User Research, Visual Design</p>
       </div>
       <div class="panel-courses">
-        <img src="" alt="">
-        <h2></h2>
-        <p></p>
-        <p></p>
+        <img src="./resources/images/course-data.jpg" alt="Laptop Charts">
+        <h2>Data</h2>
+        <p>COURSES</p>
+        <p>Data Science, Big Data, SQL, Data Visualization</p>
       </div>
       <div class="panel-courses">
-        <img src="" alt="">
-        <h2></h2>
-        <p></p>
-        <p></p>
+        <img src="./resources/images/course-business.jpg" alt="Chess Pieces">
+        <h2>Business</h2>
+        <p>COURSES</p>
+        <p>Product Development, Business Development, Startup</p>
       </div>
       <div class="panel-courses">
-        <img src="" alt="">
-        <h2></h2>
-        <p></p>
-        <p></p>
+        <img src="./resources/images/course-marketing.jpg" alt="Smartwatch">
+        <h2>Marketing</h2>
+        <p>COURSES</p>
+        <p>Analytics, Content Marketing, Mobile Marketing</p>
       </div>
     </section>
 
