Added structural html for thesis section.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,28 @@
 
     <!-- Section 3 - Thesis -->
     <section id="thesis">
+      <h1></h1>
+      <div class="large-media">
+        <video src="" autoplay poster="">
 
+        </video>
+        <h1></h1>
+        <blockquote cite="">
+
+        </blockquote>
+      </div>
+      <div class="content-right">
+        <div class="panel-right">
+          <img src="./resources/images/" alt="">
+          <h2>Orientation date</h2>
+          <p></p>
+        </div>
+        <div class="panel-right">
+          <img src="./resources/images/" alt="">
+          <h2>Our campus</h2>
+          <p></p>
+        </div>
+      </div>
     </section>
 
     <!-- Footer -->
