Populated content of thesis section html.

--- a/index.html
+++ b/index.html
@@ -115,26 +115,27 @@
 
     <!-- Section 3 - Thesis -->
     <section id="thesis">
-      <h1></h1>
+      <h1>Thesis Exhibit</h1>
       <div class="large-media">
-        <video src="" autoplay poster="">
-
+        <video width="" height="" controls>
+          <source src="#" type="video/">
         </video>
-        <h1></h1>
+        <h2>Reimagine urban</h2>
         <blockquote cite="">
-
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </blockquote>
       </div>
+
       <div class="content-right">
         <div class="panel-right">
-          <img src="./resources/images/" alt="">
-          <h2>Orientation date</h2>
-          <p></p>
+          <img src="./resources/images/thesis-fisma.jpg" alt="Drawing">
+          <h2>Fisma: Design and Prototype</h2>
+          <p>Designer showcase of new prototype product</p>
         </div>
         <div class="panel-right">
-          <img src="./resources/images/" alt="">
-          <h2>Our campus</h2>
-          <p></p>
+          <img src="./resources/images/thesis-now-and-then.jpg" alt="Empire State Building">
+          <h2>Now and Then</h2>
+          <p>Research study about New York</p>
         </div>
       </div>
     </section>
