Edited styling for header and text color.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="CA Logo">
-          <span><b>Colmar</b>Academy</span>
+          <span><b>Colmar</b><span>Academy</span></span>
         </div>
         <div class="menu">
           <ul>
