Added id and class attributes to main sections designating them as flexboxes.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <!-- Banner -->
-    <div class="banner">
+    <div class="banner flex">
       <div class="large-media">
         <img src="./resources/images/banner.jpg" alt="Students Homework">
       </div>
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Section 1 - General -->
-    <section id="general">
+    <section id="general flex">
       <div class="general-left">
         <div class="large-media">
           <img src="./resources/images/information-main.jpg" alt="Reading Book">
@@ -73,7 +73,7 @@
     </section>
 
     <!-- Section 2 - Courses -->
-    <section id="courses">
+    <section id="courses flex">
       <h1>Start learning</h1>
       <div class="panel-courses">
         <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
@@ -114,7 +114,7 @@
     </section>
 
     <!-- Section 3 - Thesis -->
-    <section id="thesis">
+    <section id="thesis flex">
       <h1>Thesis Exhibit</h1>
       <div class="large-media">
         <video width="" height="" controls>
