Styled banner section, adjusted spacing of banner section and between banner and section 1.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </nav>
     </header>
 
+<!-- Main -->
     <!-- Banner -->
     <div class="banner flex">
       <div class="large-media">
@@ -33,12 +34,12 @@
       <div class="banner-text">
         <h1>Learn something new everyday</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <button type="button" name="button">Start here</button>
+        <button type="button" name="button"><a href="#">Start Here</a></button>
       </div>
     </div>
 
     <!-- Section 1 - General -->
-    <section id="general flex">
+    <section class="general flex">
       <div class="general-left">
         <div class="large-media">
           <img src="./resources/images/information-main.jpg" alt="Reading Book">
@@ -73,7 +74,7 @@
     </section>
 
     <!-- Section 2 - Courses -->
-    <section id="courses flex">
+    <section class="courses flex">
       <h1>Start learning</h1>
       <div class="panel-courses">
         <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
@@ -114,7 +115,7 @@
     </section>
 
     <!-- Section 3 - Thesis -->
-    <section id="thesis flex">
+    <section class="thesis flex">
       <h1>Thesis Exhibit</h1>
       <div class="large-media">
         <video width="" height="" controls>
