--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
 <!-- Main -->
     <!-- Banner -->
     <div class="banner flex">
-      <div class="large-media">
-        <img src="./resources/images/banner.jpg" alt="Students Homework">
-      </div>
-      <div class="banner-text">
-        <h1>Learn something new everyday</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <button type="button" name="button"><a href="#">Start Here</a></button>
+      <div class="banner-content flex">
+        <div class="large-media">
+          <img src="./resources/images/banner.jpg" alt="Students Homework">
+        </div>
+        <div class="banner-text">
+          <h1>Learn something new everyday</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <button type="button" name="button"><a href="#">Start Here</a></button>
+        </div>
       </div>
     </div>
 
@@ -51,31 +53,37 @@
         <cite>Emanuel, Sr Strategist at Hiring.com</cite>
       </div>
 
-      <div class="content-right">
+      <div class="general-right flex">
         <div class="panel-right">
           <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
-          <h2>Orientation date</h2>
-          <p></p>
-          <a href="#">Read more</a>
+          <div class="right-text flex">
+            <span class="title">Orientation Dates</span>
+            <span>Tue 10/11 & Wed 10/12: 8AM-3PM</span>
+            <span><a href="#">Read more</a></span>
+          </div>
         </div>
         <div class="panel-right">
           <img src="./resources/images/information-campus.jpg" alt="Classroom">
-          <h2>Our campus</h2>
-          <p></p>
-          <a href="#">Read more</a>
+          <div class="right-text flex">
+            <span class="title">Our Campuses</span>
+            <span>Find out which campus is close to you.</span>
+            <span><a href="#">Read more</a></span>
+          </div>
         </div>
-        <div class="panel-right">
+        <div class="panel-right lecturer">
           <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
-          <h2>Our guest lecture</h2>
-          <p></p>
-          <a href="#">Read more</a>
+          <div class="right-text flex">
+            <span class="title">Our Guest Lecturer</span>
+            <span>Join a keynote with Oliver Sack about music in medical treatment.</span>
+            <span><a href="#">Read more</a></span>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- Section 2 - Courses -->
     <section class="courses flex">
-      <h1>Start learning</h1>
+      <h1>Start Learning</h1>
       <div class="panel-courses">
         <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
         <h2>Software Engineering</h2>
@@ -84,7 +92,7 @@
       </div>
       <div class="panel-courses">
         <img src="./resources/images/course-computer-art.jpg" alt="Handheld Cellphone">
-        <h2>Comuter Art</h2>
+        <h2>Computer Art</h2>
         <p>COURSES</p>
         <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
       </div>
@@ -121,7 +129,7 @@
         <video width="" height="" controls>
           <source src="#" type="video/">
         </video>
-        <h2>Reimagine urban</h2>
+        <h2>Reimagine Urban</h2>
         <blockquote cite="">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </blockquote>
