--- a/index.html
+++ b/index.html
@@ -25,23 +25,20 @@
       </nav>
     </header>
 
-<!-- Main -->
     <!-- Banner -->
-    <div class="banner flex">
-      <div class="banner-content flex">
-        <div class="large-media">
-          <img src="./resources/images/banner.jpg" alt="Students Homework">
-        </div>
-        <div class="banner-text">
-          <h1>Learn something new everyday</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <button type="button" name="button"><a href="#">Start Here</a></button>
-        </div>
+    <div class="banner">
+      <div class="large-media">
+        <img src="./resources/images/banner.jpg" alt="Students Homework">
+      </div>
+      <div class="banner-text">
+        <h1>Learn something new everyday</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button type="button" name="button">Start here</button>
       </div>
     </div>
 
     <!-- Section 1 - General -->
-    <section class="general flex">
+    <section id="general">
       <div class="general-left">
         <div class="large-media">
           <img src="./resources/images/information-main.jpg" alt="Reading Book">
@@ -53,37 +50,31 @@
         <cite>Emanuel, Sr Strategist at Hiring.com</cite>
       </div>
 
-      <div class="general-right flex">
+      <div class="content-right">
         <div class="panel-right">
           <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
-          <div class="right-text flex">
-            <span class="title">Orientation Dates</span>
-            <span>Tue 10/11 & Wed 10/12: 8AM-3PM</span>
-            <span><a href="#">Read more</a></span>
-          </div>
+          <h2>Orientation date</h2>
+          <p></p>
+          <a href="#">Read more</a>
         </div>
         <div class="panel-right">
           <img src="./resources/images/information-campus.jpg" alt="Classroom">
-          <div class="right-text flex">
-            <span class="title">Our Campuses</span>
-            <span>Find out which campus is close to you.</span>
-            <span><a href="#">Read more</a></span>
-          </div>
+          <h2>Our campus</h2>
+          <p></p>
+          <a href="#">Read more</a>
         </div>
-        <div class="panel-right lecturer">
+        <div class="panel-right">
           <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
-          <div class="right-text flex">
-            <span class="title">Our Guest Lecturer</span>
-            <span>Join a keynote with Oliver Sack about music in medical treatment.</span>
-            <span><a href="#">Read more</a></span>
-          </div>
+          <h2>Our guest lecture</h2>
+          <p></p>
+          <a href="#">Read more</a>
         </div>
       </div>
     </section>
 
     <!-- Section 2 - Courses -->
-    <section class="courses flex">
-      <h1>Start Learning</h1>
+    <section id="courses">
+      <h1>Start learning</h1>
       <div class="panel-courses">
         <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
         <h2>Software Engineering</h2>
@@ -92,7 +83,7 @@
       </div>
       <div class="panel-courses">
         <img src="./resources/images/course-computer-art.jpg" alt="Handheld Cellphone">
-        <h2>Computer Art</h2>
+        <h2>Comuter Art</h2>
         <p>COURSES</p>
         <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
       </div>
@@ -123,13 +114,13 @@
     </section>
 
     <!-- Section 3 - Thesis -->
-    <section class="thesis flex">
+    <section id="thesis">
       <h1>Thesis Exhibit</h1>
       <div class="large-media">
         <video width="" height="" controls>
           <source src="#" type="video/">
         </video>
-        <h2>Reimagine Urban</h2>
+        <h2>Reimagine urban</h2>
         <blockquote cite="">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </blockquote>
