--- a/index.html
+++ b/index.html
@@ -26,54 +26,45 @@
     </header>
 
     <!-- Banner -->
-    <div class="banner">
-      <div class="large-media">
-        <img src="./resources/images/banner.jpg" alt="Students Homework">
-      </div>
-      <div class="banner-text">
-        <h1>Learn something new everyday</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <button type="button" name="button">Start here</button>
-      </div>
-    </div>
+    <section class="banner flex container">
+      <img src="./resources/images/banner.jpg" alt="Students Homework">
+      <h1>Learn something new everyday</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <button type="button" name="button">Start here</button>
+    </section>
 
-    <!-- Section 1 - General -->
-    <section id="general">
-      <div class="general-left">
-        <div class="large-media">
-          <img src="./resources/images/information-main.jpg" alt="Reading Book">
-        </div>
-        <h1>It doesn't hurt to keep practicing</h1>
-        <blockquote cite="">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </blockquote>
-        <cite>Emanuel, Sr Strategist at Hiring.com</cite>
+    <!-- Information -->
+    <section id="info flex container">
+      <!-- Left - Information -->
+      <img src="./resources/images/information-main.jpg" alt="Reading Book">
+      <h1>It doesn't hurt to keep practicing</h1>
+      <blockquote cite="">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </blockquote>
+      <cite>Emanuel, Sr Strategist at Hiring.com</cite>
+      <!-- Right - Information -->
+      <div class="panel-right">
+        <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
+        <h2>Orientation date</h2>
+        <p></p>
+        <a href="#">Read more</a>
       </div>
-
-      <div class="content-right">
-        <div class="panel-right">
-          <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
-          <h2>Orientation date</h2>
-          <p></p>
-          <a href="#">Read more</a>
-        </div>
-        <div class="panel-right">
-          <img src="./resources/images/information-campus.jpg" alt="Classroom">
-          <h2>Our campus</h2>
-          <p></p>
-          <a href="#">Read more</a>
-        </div>
-        <div class="panel-right">
-          <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
-          <h2>Our guest lecture</h2>
-          <p></p>
-          <a href="#">Read more</a>
-        </div>
+      <div class="panel-right">
+        <img src="./resources/images/information-campus.jpg" alt="Classroom">
+        <h2>Our campus</h2>
+        <p></p>
+        <a href="#">Read more</a>
+      </div>
+      <div class="panel-right">
+        <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+        <h2>Our guest lecture</h2>
+        <p></p>
+        <a href="#">Read more</a>
       </div>
     </section>
 
-    <!-- Section 2 - Courses -->
-    <section id="courses">
+    <!-- Courses -->
+    <section id="courses flex container">
       <h1>Start learning</h1>
       <div class="panel-courses">
         <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
@@ -113,30 +104,27 @@
       </div>
     </section>
 
-    <!-- Section 3 - Thesis -->
-    <section id="thesis">
+    <!-- Thesis -->
+    <section id="thesis flex container">
+      <!-- Left - Thesis -->
       <h1>Thesis Exhibit</h1>
-      <div class="large-media">
-        <video width="" height="" controls>
-          <source src="#" type="video/">
-        </video>
-        <h2>Reimagine urban</h2>
-        <blockquote cite="">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </blockquote>
+      <video width="" height="" controls>
+        <source src="#" type="video/">
+      </video>
+      <h2>Reimagine urban</h2>
+      <blockquote cite="">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </blockquote>
+      <!-- Right Thesis -->
+      <div class="panel-right">
+        <img src="./resources/images/thesis-fisma.jpg" alt="Drawing">
+        <h2>Fisma: Design and Prototype</h2>
+        <p>Designer showcase of new prototype product</p>
       </div>
-
-      <div class="content-right">
-        <div class="panel-right">
-          <img src="./resources/images/thesis-fisma.jpg" alt="Drawing">
-          <h2>Fisma: Design and Prototype</h2>
-          <p>Designer showcase of new prototype product</p>
-        </div>
-        <div class="panel-right">
-          <img src="./resources/images/thesis-now-and-then.jpg" alt="Empire State Building">
-          <h2>Now and Then</h2>
-          <p>Research study about New York</p>
-        </div>
+      <div class="panel-right">
+        <img src="./resources/images/thesis-now-and-then.jpg" alt="Empire State Building">
+        <h2>Now and Then</h2>
+        <p>Research study about New York</p>
       </div>
     </section>
 
