--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="CA Logo">
-          <span><b>Colmar</b><span>Academy</span></span>
+          <span><span class="bold">Colmar</span><span class="light">Academy</span></span>
         </div>
         <div class="menu">
           <ul>
