Adjusted width of all media files and text elements of right-side panels.

--- a/index.html
+++ b/index.html
@@ -46,21 +46,27 @@
       <!-- Right - Information -->
       <div class="panel-right">
         <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
-        <h2>Orientation date</h2>
-        <p></p>
-        <a href="#">Read more</a>
+        <div class="right-text">
+          <h2>Orientation date</h2>
+          <p></p>
+          <a href="#">Read more</a>
+        </div>
       </div>
       <div class="panel-right">
         <img src="./resources/images/information-campus.jpg" alt="Classroom">
-        <h2>Our campus</h2>
-        <p></p>
-        <a href="#">Read more</a>
+        <div class="right-text">
+          <h2>Our campus</h2>
+          <p></p>
+          <a href="#">Read more</a>
+        </div>
       </div>
       <div class="panel-right">
         <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
-        <h2>Our guest lecture</h2>
-        <p></p>
-        <a href="#">Read more</a>
+        <div class="right-text">
+          <h2>Our guest lecture</h2>
+          <p></p>
+          <a href="#">Read more</a>
+        </div>
       </div>
     </section>
 
@@ -109,7 +115,7 @@
     <section id="thesis flex container">
       <!-- Left - Thesis -->
       <h1>Thesis Exhibit</h1>
-      <video width="" height="" controls>
+      <video width="60%" height="" controls>
         <source src="#" type="video/">
       </video>
       <h2>Reimagine urban</h2>
@@ -119,13 +125,17 @@
       <!-- Right Thesis -->
       <div class="panel-right">
         <img src="./resources/images/thesis-fisma.jpg" alt="Drawing">
-        <h2>Fisma: Design and Prototype</h2>
-        <p>Designer showcase of new prototype product</p>
+        <div class="right-text">
+          <h2>Fisma: Design and Prototype</h2>
+          <p>Designer showcase of new prototype product</p>
+        </div>
       </div>
       <div class="panel-right">
         <img src="./resources/images/thesis-now-and-then.jpg" alt="Empire State Building">
-        <h2>Now and Then</h2>
-        <p>Research study about New York</p>
+        <div class="right-text">
+          <h2>Now and Then</h2>
+          <p>Research study about New York</p>
+        </div>
       </div>
     </section>
 
@@ -138,7 +148,6 @@
           <li><a href="#">Privacy</a></li>
         </ul>
       </nav>
-
     </footer>
 
   </body>
