--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     <!-- Banner -->
     <section class="banner flex container">
       <img src="./resources/images/banner.jpg" alt="Students Homework">
-      <h1>Learn something new everyday</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <button type="button" name="button">Start here</button>
+      <div class="banner-text">
+        <h1>Learn something new everyday</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button type="button" name="button">Start here</button>
+      </div>
     </section>
 
     <!-- Information -->
