--- a/index.html
+++ b/index.html
@@ -37,20 +37,22 @@
     </section>
 
     <!-- Information -->
-    <section id="info flex container">
+    <section class="info flex container">
       <!-- Left - Information -->
       <img src="./resources/images/information-main.jpg" alt="Reading Book">
-      <h1>It doesn't hurt to keep practicing</h1>
-      <blockquote cite="">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </blockquote>
-      <cite>Emanuel, Sr Strategist at Hiring.com</cite>
+      <div class="left-text">
+        <h1>It doesn't hurt to keep practicing</h1>
+        <blockquote cite="">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </blockquote>
+        <cite>Emanuel, Sr Strategist at Hiring.com</cite>
+      </div>
       <!-- Right - Information -->
       <div class="panel-right">
         <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
         <div class="right-text">
           <h2>Orientation date</h2>
-          <p></p>
+          <p>Tue 10/11 & Wed 10/12: 8AM-3PM</p>
           <a href="#">Read more</a>
         </div>
       </div>
@@ -58,7 +60,7 @@
         <img src="./resources/images/information-campus.jpg" alt="Classroom">
         <div class="right-text">
           <h2>Our campus</h2>
-          <p></p>
+          <p>Find a campus close to you!</p>
           <a href="#">Read more</a>
         </div>
       </div>
@@ -66,14 +68,14 @@
         <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
         <div class="right-text">
           <h2>Our guest lecture</h2>
-          <p></p>
+          <p>Join a keynote with Oliver Sack about music in medical treatment.</p>
           <a href="#">Read more</a>
         </div>
       </div>
     </section>
 
     <!-- Courses -->
-    <section id="courses flex container">
+    <section class="courses flex container">
       <h1>Start learning</h1>
       <div class="panel-courses">
         <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
@@ -114,7 +116,7 @@
     </section>
 
     <!-- Thesis -->
-    <section id="thesis flex container">
+    <section class="thesis flex container">
       <!-- Left - Thesis -->
       <h1>Thesis Exhibit</h1>
       <video width="60%" height="" controls>
