--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul>
             <li><a href="#">On Campus</a></li>
             <li><a href="#">Online</a></li>
-            <li><a href="#">For Companies</a></li>
+            <li><a href="#">Our Companies</a></li>
             <li><a href="#">Sign In</a></li>
           </ul>
         </div>
@@ -39,37 +39,41 @@
     <!-- Information -->
     <section class="info flex container">
       <!-- Left - Information -->
-      <img src="./resources/images/information-main.jpg" alt="Reading Book">
-      <div class="left-text">
-        <h1>It doesn't hurt to keep practicing</h1>
-        <blockquote cite="">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </blockquote>
-        <cite>Emanuel, Sr Strategist at Hiring.com</cite>
+      <div class="info-left">
+        <img src="./resources/images/information-main.jpg" alt="Reading Book">
+        <div class="left-text">
+          <h1>It doesn't hurt to keep practicing</h1>
+          <blockquote cite="Emanuel, Sr Strategist at Hiring.com">
+            Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula.
+          </blockquote>
+          <cite>Emanuel, Sr Strategist at Hiring.com</cite>
+        </div>
       </div>
       <!-- Right - Information -->
-      <div class="panel-right">
-        <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
-        <div class="right-text">
-          <h2>Orientation date</h2>
-          <p>Tue 10/11 & Wed 10/12: 8AM-3PM</p>
-          <a href="#">Read more</a>
+      <div class="info-right">
+        <div class="panel-right">
+          <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
+          <div class="right-text">
+            <h2>Orientation date</h2>
+            <p>Tue 10/11 & Wed 10/12: 8AM-3PM</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
-      </div>
-      <div class="panel-right">
-        <img src="./resources/images/information-campus.jpg" alt="Classroom">
-        <div class="right-text">
-          <h2>Our campus</h2>
-          <p>Find a campus close to you!</p>
-          <a href="#">Read more</a>
+        <div class="panel-right">
+          <img src="./resources/images/information-campus.jpg" alt="Classroom">
+          <div class="right-text">
+            <h2>Our campus</h2>
+            <p>Find a campus close to you!</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
-      </div>
-      <div class="panel-right">
-        <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
-        <div class="right-text">
-          <h2>Our guest lecture</h2>
-          <p>Join a keynote with Oliver Sack about music in medical treatment.</p>
-          <a href="#">Read more</a>
+        <div class="panel-right">
+          <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+          <div class="right-text">
+            <h2>Our guest lecture</h2>
+            <p>Join a keynote with Oliver Sack about music in medical treatment.</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
       </div>
     </section>
