--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="panel-right">
           <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
           <div class="right-text">
-            <h2>Orientation date</h2>
+            <h2>Orientation Date</h2>
             <p>Tue 10/11 & Wed 10/12: 8AM-3PM</p>
             <a href="#">Read more</a>
           </div>
@@ -62,15 +62,15 @@
         <div class="panel-right">
           <img src="./resources/images/information-campus.jpg" alt="Classroom">
           <div class="right-text">
-            <h2>Our campus</h2>
+            <h2>Our Campus</h2>
             <p>Find a campus close to you!</p>
             <a href="#">Read more</a>
           </div>
         </div>
-        <div class="panel-right">
+        <div class="panel-right lecture">
           <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
           <div class="right-text">
-            <h2>Our guest lecture</h2>
+            <h2>Our Guest Lecturer</h2>
             <p>Join a keynote with Oliver Sack about music in medical treatment.</p>
             <a href="#">Read more</a>
           </div>
@@ -81,41 +81,57 @@
     <!-- Courses -->
     <section class="courses flex container">
       <h1>Start learning</h1>
-      <div class="panel-courses">
-        <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
-        <h2>Software Engineering</h2>
-        <p>COURSES</p>
-        <p>Web Development, Mobile Development, iOT, APIs</p>
+      <div class="course-row row-1">
+        <div class="panel-courses">
+          <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
+          <div class="course-text">
+            <h2>Software Engineering</h2>
+            <p>COURSES</p>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
+        </div>
+        <div class="panel-courses">
+          <img src="./resources/images/course-computer-art.jpg" alt="Handheld Cellphone">
+          <div class="course-text">
+            <h2>Computer Art</h2>
+            <p>COURSES</p>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          </div>
+        </div>
+        <div class="panel-courses">
+          <img src="./resources/images/course-design.jpg" alt="Vintage Camera">
+          <div class="course-text">
+            <h2>Design</h2>
+            <p>COURSES</p>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
+        </div>
       </div>
-      <div class="panel-courses">
-        <img src="./resources/images/course-computer-art.jpg" alt="Handheld Cellphone">
-        <h2>Comuter Art</h2>
-        <p>COURSES</p>
-        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-      </div>
-      <div class="panel-courses">
-        <img src="./resources/images/course-design.jpg" alt="Vintage Camera">
-        <h2>Design</h2>
-        <p>COURSES</p>
-        <p>User Experience Design, User Research, Visual Design</p>
-      </div>
-      <div class="panel-courses">
-        <img src="./resources/images/course-data.jpg" alt="Laptop Charts">
-        <h2>Data</h2>
-        <p>COURSES</p>
-        <p>Data Science, Big Data, SQL, Data Visualization</p>
-      </div>
-      <div class="panel-courses">
-        <img src="./resources/images/course-business.jpg" alt="Chess Pieces">
-        <h2>Business</h2>
-        <p>COURSES</p>
-        <p>Product Development, Business Development, Startup</p>
-      </div>
-      <div class="panel-courses">
-        <img src="./resources/images/course-marketing.jpg" alt="Smartwatch">
-        <h2>Marketing</h2>
-        <p>COURSES</p>
-        <p>Analytics, Content Marketing, Mobile Marketing</p>
+      <div class="course-row row-2">
+        <div class="panel-courses">
+          <img src="./resources/images/course-data.jpg" alt="Laptop Charts">
+          <div class="course-text">
+            <h2>Data</h2>
+            <p>COURSES</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
+        </div>
+        <div class="panel-courses">
+          <img src="./resources/images/course-business.jpg" alt="Chess Pieces">
+          <div class="course-text">
+            <h2>Business</h2>
+            <p>COURSES</p>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
+        </div>
+        <div class="panel-courses">
+          <img src="./resources/images/course-marketing.jpg" alt="Smartwatch">
+          <div class="course-text">
+            <h2>Marketing</h2>
+            <p>COURSES</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -149,7 +165,7 @@
 
     <!-- Footer -->
     <footer>
-      <p>© 2016 Colmar Academy | All rights reserved</p>
+      <p class="footer-text">© 2016 Colmar Academy | All rights reserved</p>
       <nav>
         <ul>
           <li><a href="#">Terms</a></li>
