--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
     <section class="thesis flex container">
       <!-- Left - Thesis -->
       <h1>Thesis Exhibit</h1>
-      <video width="60%" height="" controls>
-        <source src="#" type="video/">
+      <video width="60%" height="" autoplay loop muted>
+        <source src="./resources/videos/thesis.mp4" type="video/mp4">
       </video>
       <h2>Reimagine urban</h2>
       <blockquote cite="">
