Restructured html thesis section.

--- a/index.html
+++ b/index.html
@@ -137,28 +137,32 @@
 
     <!-- Thesis -->
     <section class="thesis flex container">
-      <!-- Left - Thesis -->
       <h1>Thesis Exhibit</h1>
-      <video width="60%" height="" autoplay loop muted>
-        <source src="./resources/videos/thesis.mp4" type="video/mp4">
-      </video>
-      <h2>Reimagine urban</h2>
-      <blockquote cite="">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </blockquote>
-      <!-- Right Thesis -->
-      <div class="panel-right">
-        <img src="./resources/images/thesis-fisma.jpg" alt="Drawing">
-        <div class="right-text">
-          <h2>Fisma: Design and Prototype</h2>
-          <p>Designer showcase of new prototype product</p>
-        </div>
+    <!-- Left - Thesis -->
+      <div class="thesis-left">
+        <video width="60%" height="" autoplay loop muted>
+          <source src="./resources/videos/thesis.mp4" type="video/mp4">
+        </video>
+        <h2>Reimagine urban</h2>
+        <blockquote cite="">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </blockquote>
       </div>
-      <div class="panel-right">
-        <img src="./resources/images/thesis-now-and-then.jpg" alt="Empire State Building">
-        <div class="right-text">
-          <h2>Now and Then</h2>
-          <p>Research study about New York</p>
+      <!-- Right Thesis -->
+      <div class="thesis-right">
+        <div class="panel-right">
+          <img src="./resources/images/thesis-fisma.jpg" alt="Drawing">
+          <div class="right-text">
+            <h2>Fisma: Design and Prototype</h2>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
+        <div class="panel-right">
+          <img src="./resources/images/thesis-now-and-then.jpg" alt="Empire State Building">
+          <div class="right-text">
+            <h2>Now and Then</h2>
+            <p>Research study about New York</p>
+          </div>
         </div>
       </div>
     </section>
