Formatted thesis section; rearranged some shared properties on css.

--- a/index.html
+++ b/index.html
@@ -138,19 +138,22 @@
     <!-- Thesis -->
     <section class="thesis flex container">
       <h1>Thesis Exhibit</h1>
+      <div class="thesis-left-right">
     <!-- Left - Thesis -->
       <div class="thesis-left">
         <video width="60%" height="" autoplay loop muted>
           <source src="./resources/videos/thesis.mp4" type="video/mp4">
         </video>
-        <h2>Reimagine urban</h2>
-        <blockquote cite="">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </blockquote>
+        <div class="left-text">
+          <h2>Reimagine urban</h2>
+          <blockquote cite="">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </blockquote>
+        </div>
       </div>
       <!-- Right Thesis -->
       <div class="thesis-right">
-        <div class="panel-right">
+        <div class="panel-right fisma">
           <img src="./resources/images/thesis-fisma.jpg" alt="Drawing">
           <div class="right-text">
             <h2>Fisma: Design and Prototype</h2>
@@ -164,6 +167,7 @@
             <p>Research study about New York</p>
           </div>
         </div>
+      </div>
       </div>
     </section>
 
