--- a/index.html
+++ b/index.html
@@ -171,14 +171,19 @@
       </div>
     </section>
 
+    <hr>
     <!-- Footer -->
     <footer>
-      <p class="footer-text">© 2016 Colmar Academy | All rights reserved</p>
       <nav>
-        <ul>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Privacy</a></li>
-        </ul>
+        <div class="copyright">
+          <span class="footer-text">© 2016 Colmar Academy | All rights reserved</span>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
+          </ul>
+        </div>
       </nav>
     </footer>
 
