--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Header -->
     <header>
-      <nav>
+      <nav class="desktop">
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="CA Logo">
           <span><span class="bold">Colmar</span><span class="light">Academy</span></span>
@@ -23,6 +23,13 @@
             <li><a href="#">Sign In</a></li>
           </ul>
         </div>
+      </nav>
+
+      <nav class="mobile">
+        <a href="#"><img src="./resources/images/ic-logo.svg" alt="CA Logo"></a>
+        <a href="#"><img src="./resources/images/ic-on-campus.svg" alt=""></a>
+        <a href="#"><img src="./resources/images/ic-online.svg" alt=""></a>
+        <a href="#"><img src="./resources/images/ic-login.svg" alt=""></a>
       </nav>
     </header>
 
