Cleaned up css, removed redundant display:flex properties.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Information -->
     <section class="info flex container">
       <!-- Left - Information -->
-      <div class="info-left">
+      <div class="info-left flex">
         <img src="./resources/images/information-main.jpg" alt="Reading Book">
         <div class="left-text">
           <h1>It doesn't hurt to keep practicing</h1>
@@ -57,7 +57,7 @@
         </div>
       </div>
       <!-- Right - Information -->
-      <div class="info-right">
+      <div class="info-right flex">
         <div class="panel-right">
           <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
           <div class="right-text">
@@ -88,7 +88,7 @@
     <!-- Courses -->
     <section class="courses flex container">
       <h1>Start learning</h1>
-      <div class="course-row row-1">
+      <div class="course-row row-1 flex">
         <div class="panel-courses">
           <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
           <div class="course-text">
@@ -114,7 +114,7 @@
           </div>
         </div>
       </div>
-      <div class="course-row row-2">
+      <div class="course-row row-2 flex">
         <div class="panel-courses">
           <img src="./resources/images/course-data.jpg" alt="Laptop Charts">
           <div class="course-text">
@@ -145,9 +145,9 @@
     <!-- Thesis -->
     <section class="thesis flex container">
       <h1>Thesis Exhibit</h1>
-      <div class="thesis-left-right">
+      <div class="thesis-left-right flex">
     <!-- Left - Thesis -->
-      <div class="thesis-left">
+      <div class="thesis-left flex">
         <video width="60%" height="" autoplay loop muted>
           <source src="./resources/videos/thesis.mp4" type="video/mp4">
         </video>
@@ -159,7 +159,7 @@
         </div>
       </div>
       <!-- Right Thesis -->
-      <div class="thesis-right">
+      <div class="thesis-right flex">
         <div class="panel-right fisma">
           <img src="./resources/images/thesis-fisma.jpg" alt="Drawing">
           <div class="right-text">
@@ -181,7 +181,7 @@
     <hr>
     <!-- Footer -->
     <footer>
-      <nav>
+      <nav class="flex">
         <div class="copyright">
           <span class="footer-text">© 2016 Colmar Academy | All rights reserved</span>
         </div>
