--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <!-- Banner -->
-    <section class="banner flex container">
+    <section class="banner flex">
       <img src="./resources/images/banner.jpg" alt="Students Homework">
       <div class="banner-text">
         <h1>Learn something new everyday</h1>
@@ -44,7 +44,7 @@
     </section>
 
     <!-- Information -->
-    <section class="info flex container">
+    <section class="info flex">
       <!-- Left - Information -->
       <div class="info-left flex">
         <img src="./resources/images/information-main.jpg" alt="Reading Book">
@@ -86,8 +86,8 @@
     </section>
 
     <!-- Courses -->
-    <section class="courses flex container">
-      <h1>Start learning</h1>
+    <section class="courses flex">
+      <h1>Start Learning</h1>
       <div class="course-row row-1 flex">
         <div class="panel-courses">
           <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
@@ -140,10 +140,20 @@
           </div>
         </div>
       </div>
+      <div class="mobile flex">
+        <p><a>Software Engineering</a></p>
+        <p><a>Computer Art</a></p>
+        <p><a>Design</a></p>
+        <p><a>Data</a></p>
+        <p><a>Business</a></p>
+        <p><a>Marketing</a></p>
+
+
+      </div>
     </section>
 
     <!-- Thesis -->
-    <section class="thesis flex container">
+    <section class="thesis flex">
       <h1>Thesis Exhibit</h1>
       <div class="thesis-left-right flex">
     <!-- Left - Thesis -->
