Edited html thesis section and added media query css for thesis section; previous commit also edited html courses section.

--- a/index.html
+++ b/index.html
@@ -147,15 +147,18 @@
         <p><a>Data</a></p>
         <p><a>Business</a></p>
         <p><a>Marketing</a></p>
-
-
       </div>
     </section>
 
     <!-- Thesis -->
     <section class="thesis flex">
       <h1>Thesis Exhibit</h1>
-      <div class="thesis-left-right flex">
+      <div class="mobile">
+        <video width="100%" height="" autoplay loop muted>
+          <source src="./resources/videos/thesis.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="thesis-left-right flex desktop">
     <!-- Left - Thesis -->
       <div class="thesis-left flex">
         <video width="60%" height="" autoplay loop muted>
