--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <div class="info-right flex">
         <div class="panel-right">
           <img src="./resources/images/information-orientation.jpg" alt="Sidewalk">
+          <img id="mobile-img" src="./resources/images/information-orientation-mobile.jpg" alt="Sidewalk">
           <div class="right-text">
             <h2>Orientation Date</h2>
             <p>Tue 10/11 & Wed 10/12: 8AM-3PM</p>
@@ -68,6 +69,7 @@
         </div>
         <div class="panel-right">
           <img src="./resources/images/information-campus.jpg" alt="Classroom">
+          <img id="mobile-img" src="./resources/images/information-campus-mobile.jpg" alt="Classroom">
           <div class="right-text">
             <h2>Our Campus</h2>
             <p>Find a campus close to you!</p>
@@ -76,6 +78,7 @@
         </div>
         <div class="panel-right lecture">
           <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+          <img id="mobile-img" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Oliver Sack">
           <div class="right-text">
             <h2>Our Guest Lecturer</h2>
             <p>Join a keynote with Oliver Sack about music in medical treatment.</p>
@@ -192,7 +195,7 @@
     </section>
 
     <!-- Footer -->
-    <hr>    
+    <hr>
     <footer>
       <nav class="flex">
         <div class="copyright">
