Added hover pseudo-class selector to anchor elements and adjusted color of anchor tags.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav class="desktop">
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="CA Logo">
-          <span><span class="bold">Colmar</span><span class="light">Academy</span></span>
+          <a href="#"><span class="bold">Colmar</span><span class="light">Academy</span></a>
         </div>
         <div class="menu">
           <ul>
