--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="./resources/reset.css">
     <link rel="stylesheet" href="./resources/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum|Ubuntu" rel="stylesheet">
   </head>
   <body>
     <!-- Header -->
