Styled text/font for info section; course and thesis sections on desktop no longer laid out properly.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <blockquote cite="Emanuel, Sr Strategist at Hiring.com">
             "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
           </blockquote>
-          <cite>Emanuel, Sr Strategist at Hiring.com</cite>
+          <cite>- Emanuel, Sr Strategist at Hiring.com</cite>
         </div>
       </div>
       <!-- Right - Information -->
@@ -64,7 +64,7 @@
           <div class="right-text">
             <h2>Orientation Date</h2>
             <p>Tue 10/11 & Wed 10/12: 8AM-3PM</p>
-            <a href="#">Read more</a>
+            <p><a href="#">Read more</a></p>
           </div>
         </div>
         <div class="panel-right">
@@ -73,7 +73,7 @@
           <div class="right-text">
             <h2>Our Campus</h2>
             <p>Find a campus close to you!</p>
-            <a href="#">Read more</a>
+            <p><a href="#">Read more</a></p>
           </div>
         </div>
         <div class="panel-right lecture">
@@ -82,7 +82,7 @@
           <div class="right-text">
             <h2>Our Guest Lecturer</h2>
             <p>Join a keynote with Oliver Sack about music in medical treatment.</p>
-            <a href="#">Read more</a>
+            <p><a href="#">Read more</a></p>
           </div>
         </div>
       </div>
