--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
           <div class="course-text">
             <a href="#"><h2>Software Engineering</h2></a>
-            <p>COURSES</p>
+            <p id="course-id">COURSES</p>
             <p>Web Development, Mobile Development, iOT, APIs</p>
           </div>
         </div>
@@ -104,7 +104,7 @@
           <img src="./resources/images/course-computer-art.jpg" alt="Handheld Cellphone">
           <div class="course-text">
             <a href="#"><h2>Computer Art</h2></a>
-            <p>COURSES</p>
+            <p id="course-id">COURSES</p>
             <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
           </div>
         </div>
@@ -112,7 +112,7 @@
           <img src="./resources/images/course-design.jpg" alt="Vintage Camera">
           <div class="course-text">
             <a href="#"><h2>Design</h2></a>
-            <p>COURSES</p>
+            <p id="course-id">COURSES</p>
             <p>User Experience Design, User Research, Visual Design</p>
           </div>
         </div>
@@ -122,7 +122,7 @@
           <img src="./resources/images/course-data.jpg" alt="Laptop Charts">
           <div class="course-text">
             <a href="#"><h2>Data</h2></a>
-            <p>COURSES</p>
+            <p id="course-id">COURSES</p>
             <p>Data Science, Big Data, SQL, Data Visualization</p>
           </div>
         </div>
@@ -130,7 +130,7 @@
           <img src="./resources/images/course-business.jpg" alt="Chess Pieces">
           <div class="course-text">
             <a href="#"><h2>Business</h2></a>
-            <p>COURSES</p>
+            <p id="course-id">COURSES</p>
             <p>Product Development, Business Development, Startup</p>
           </div>
         </div>
@@ -138,7 +138,7 @@
           <img src="./resources/images/course-marketing.jpg" alt="Smartwatch">
           <div class="course-text">
             <a href="#"><h2>Marketing</h2></a>
-            <p>COURSES</p>
+            <p id="course-id">COURSES</p>
             <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
         </div>
